--- a/Data_Structures_Linear_Algebra.ipynb
+++ b/Data_Structures_Linear_Algebra.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN8AI0NfDrKflY8IkXIMfuE",
+      "authorship_tag": "ABX9TyN6O/Fp/vzJNn8x+LAVBqTR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
       "metadata": {
         "id": "L8Dst6HOaFxP"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -154,9 +154,32 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "print(f\"distance: {d_caught}Km, time:{t_caught}sec\")"
+      ],
+      "metadata": {
+        "id": "-omz-yPhetlQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f7d7b6c9-34e7-4b17-ebcc-2f83835ebfb4"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "distance: 75Km, time:30sec\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "-omz-yPhetlQ"
+        "id": "b9qXwlRTiST8"
       },
       "execution_count": null,
       "outputs": []
